# glazier-react-examples

./: .gitignore  README.md  asset-manifest.json  cabal.project  glazier-react-examples.cabal  index.html  stack.yaml
examples/todo/: .babelrc  .gitignore  Makefile  README.CreateReactApp.md  README.md  build.sh  cabal.project  ghcjs.mk  glazier-react-todo.cabal  package.json  webpack.common.js  webpack.dev.js  webpack.prod.js
examples/todo/haskell/app/: Main.hs
examples/todo/haskell/app/Todo/: App.hs  Filter.hs  Footer.hs  Input.hs  Todo.hs
examples/todo/haskell/app/Todo/App/: Run.hs
examples/todo/haskell/app/Todo/Footer/: Run.hs
examples/todo/haskell/app/Todo/Todo/: Run.hs
examples/todo/haskell/jsbits/: exports.header.js
examples/todo/haskell/jsexports/: exports.header  exports.js
examples/todo/hs/: Main.hs
examples/todo/hs/Todo/: App.hs  Todo.hs  TodoList.hs  Todos.hs
examples/todo/hs/app/: Main.hs
examples/todo/hs/app/Todo/: App.hs  Filter.hs  Footer.hs  Todo.hs  TodoCollection.hs
examples/todo/hs/app/Todo/App/: Run.hs
examples/todo/hs/app/Todo/Todo/: Run.hs
examples/todo/public/: index.html
examples/todo/src/: index.html  index.js
examples/todo2/: Shakefile.hs  package.json
examples/todo2/hs/: Main.hs
examples/todo2/hs/Todo/: App.hs  Filter.hs  Todo.hs  TodoCollection.hs  TodoList.hs
examples/todo2/src/: index.js
static/css/: main.cc10b5e2.css  main.cc10b5e2.css.map
static/js/: main.6fdd0006.js  main.6fdd0006.js.map  main.ba82bddc.js  main.ba82bddc.js.map  main.c22e1c93.js  main.c22e1c93.js.map
