name:                glazier-react-examples
version:             0.7.0.0
synopsis:            Examples of using glazier-react
description:         Examples of using glazier-react. Please see README.md.
homepage:            https://github.com/louispan/glazier-react#readme
license:             BSD3
license-file:        LICENSE
author:              Louis Pan
maintainer:          louis@pan.me
copyright:           2017 Louis Pan
category:            Web, GUI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable glazier-react-todo
  hs-source-dirs:      examples/todo/hs/app
  other-modules:
                       Todo.App
                       Todo.Todo
                       Todo.Filter
                       Todo.Footer
  main-is:             Main.hs
  ghc-options:         -Wall -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  cpp-options:         -DGHCJS_BROWSER
  build-depends:       base >= 4.7 && < 5
                     , alternators >= 1.0
                     , containers >= 0.5
                     , data-diverse >= 4.6
                     , data-diverse-lens >= 4.3
                     , deepseq >= 1.4
                     , dlist >= 0.8
                     , glazier >= 1.0
                     , glazier-react >= 1.1
                     , glazier-react-widget >= 1.1
                     , javascript-extras >= 0.5
                     , lens >= 4
                     , lens-misc >= 0
                     , monadlist >= 0
                     , mtl >= 2
                     , reducers >= 3.12
                     , tagged >= 0.8
                     , text >= 1.2
                     , transformers >= 0.4
                     , unliftio >= 0.2
                     , unliftio-core >= 0.1
  default-language:    Haskell2010
  default-extensions:  ApplicativeDo
  if impl(ghcjs)
    build-depends: ghcjs-base
                 , ghcjs-prim >= 0.1
  if !impl(ghcjs)
    build-depends: ghcjs-base-stub >= 0.2

source-repository head
  type:     git
  location: https://github.com/louispan/glazier-react-examples
