cabal-version:       2.2
name:                glazier-react-examples
version:             2.0.0.0
synopsis:            Examples of using glazier-react
description:         Examples of using glazier-react. Please see README.md.
homepage:            https://github.com/louispan/glazier-react#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Louis Pan
maintainer:          louis@pan.me
copyright:           2019 Louis Pan
category:            Web, GUI
build-type:          Simple
extra-source-files:  README.md

executable todo
  default-language:    Haskell2010
  default-extensions:  ApplicativeDo
  hs-source-dirs:      examples/todo2/hs
  other-modules:
                      --  Todo.App
                       Todo.Todo
  --                      Todo.Filter
                       -- Todo.TodoList
  main-is:             Main.hs
  ghc-options:         -Wall -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  cpp-options:         -DGHCJS_BROWSER
  build-depends:       base >= 4.7 && < 5
                     -- , aeson >= 1.4.2
                     -- , aeson-applicative >= 1.4
                     -- , alternators >= 2.0
                     -- , bytestring >= 0.10
                     -- , containers >= 0.5
                     -- , data-diverse >= 4.6
                     -- , data-diverse-lens >= 4.3
                     -- , deepseq >= 1.4
                     -- , dlist >= 0.8
                     , ghcjs-base-stub >= 0.3.0.2
                     -- , glazier >= 2
                     , glazier-react >= 2
                     , glazier-react-widget >= 2
                     , javascript-extras >= 0.6
                     , lens >= 4
                     , lens-misc >= 0
                     , monadlist >= 0
                     , mtl >= 2
                     , reducers >= 3.12
                     , tagged >= 0.8
                     , text >= 1.2
                     , transformers >= 0.4
                     , unliftio >= 0.2
                     , unliftio-core >= 0.1

source-repository head
  type:     git
  location: https://github.com/louispan/glazier-react-examples
